# gitomat

./: .gitignore  Cargo.toml  rustfmt.toml
src/: irc_client.rs  main.rs  server.rs
